# BMI-Calculator-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
